<resources>
    <string name="appName">ScanALot</string>
    <string name="actionSettings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="firstFragmentLabel">First Fragment</string>
    <string name="secondFragmentLabel">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="helloFirstFragment">Hello first fragment</string>
    <string name="helloSecondFragment">Hello second fragment. Arg: %1$s</string>
    <string name="titleActivityLogin">LoginActivity</string>
    <string name="promptEmail">Email</string>
    <string name="promptPassword">Password</string>
    <string name="actionSignIn">LOG IN</string>
    <string name="actionSignInShort">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalidUsername">Not a valid username</string>
    <string name="invalidPassword">Password must be >5 characters</string>
    <string name="loginFailed">"Login failed"</string>
    <string name="passwordAutofillHint">Password</string>
    <string name="usernameAutofillHint">UserName</string>
    <!-- Nav Bar strings, found in menu/bottom_nav.xml -->
    <string name="scan">"Scan"</string>
    <string name="editTicket">"Edit Ticket"</string>
    <string name="selectLot">"Select Lot"</string>
    <string name="logOut">"Log Out"</string>
    <!-- Scan Page Strings -->
    <string name="scanManualButton">Manual Entry</string>
    <string name="takePhoto">Take Photo</string>
    <string name="startCamera">Start Camera</string>
    <!--Manual Entry Strings-->
    <string name="manualEntrySearchButton">Search</string>
    <string name="stateSpinnerName">State</string>
    <string name="plateNumber">Plate Number</string>
    <!-- Select Lot Strings-->
    <string name="selectLotSpinner">Select Lot</string>
    <string name="confirmLot">Confirm Lot</string>
    <!--Edit Ticket Screen Strings-->
    <string name="editTicketSearchButton">Search </string>
    <string name="editTicketSearch">Search</string>
    <string name="editTicketID">TicketID</string>
    <!-- Geolocation Fragment -->
    <string name="geolocationBannerText">No Location Selected: </string>
    <!-- Citation Fragment-->
    <string name="FillCitationOfficerID">Officer ID</string>
    <string name="FillCitationPlateNumber">Plate Number</string>
    <string name="FillCitationVehicleColor">Vehicle Color</string>
    <string name="FillCitationVehicleModel">Vehicle Model</string>
    <string name="FillCitationCancelButton">Cancel</string>
    <string name="FillCitationSaveAndPrint">Save And Print</string>
    <string name="FillCitationAddCitations">Add Citations</string>
    <string name="FillCitationNotesHint">Notes</string>
    <!-- Print Preview Fragment -->
    <string name="helloBlankFragment">Hello blank fragment</string>
    <string name="ResultFillCitation">Fill Citation</string>
    <string name="ScanScreenResultsFromScan">Results From Scan</string>
    <string name="ScanResultsWrongLot">Pass Expired - Wrong Lot</string>
    <string name="PrintPreviewTicketID">Ticket ID:</string>
    <string name="PrintPreviewViolationTime">Violation Time:</string>
    <string name="PrintPreviewTicketInfo">Ticket Information</string>
    <string name="PrintPreviewReportingOfficer">Reporting Officer:</string>
    <string name="PrintPreviewCitationLocation">Citation Location:</string>
    <string name="PrintPreviewViolationType">Violation Type:</string>
    <string name="PrintPreviewFineAmount">Fine Amount:</string>
    <string name="PrintPreviewVehicleInfo">Vehicle Information</string>
    <string name="PrintPreviewLicensePlate">License Plate:</string>
    <string name="PrintPreviewVehicleOwner">Vehicle Owner:</string>
    <string name="PrintPreviewVehicleModel">Vehicle Model:</string>
    <string name="PrintPreviewVehicleColor">Vehicle Color:</string>
    <!--  Login Log Messages  -->
    <string name="strLoginFailMessage">Failed To Log In</string>
    <string name="scanDetectText">Detect Text</string>
    <!--Results Screen-->
    <string name="DetectedPlateTextView"> DetectedText</string>
    <string name="FillCitationVehicleMake">Vehicle Make</string>
    <string name="PrintPreviewVehicleMake">Vehicle Make:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>