<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/PrintPreviewConstraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditPrintPreviewFragment">

    <TextView
        android:id="@+id/editTextViewVehicleMake"
        android:layout_width="260dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:text="@string/PrintPreviewVehicleMake"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextViewVehicleModel"
        tools:text="@string/PrintPreviewVehicleMake" />

    <TextView
        android:id="@+id/editTextViewVehicleInfo"
        android:layout_width="125dp"
        android:layout_height="30dp"
        android:layout_marginTop="32dp"
        android:text="@string/PrintPreviewVehicleInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextViewFineAmount" />

    <TextView
        android:id="@+id/editTextViewTicketID"
        android:layout_width="260dp"
        android:layout_height="30dp"
        android:layout_marginTop="24dp"
        android:text="@string/PrintPreviewTicketID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextViewPreviewTicketInfo" />

    <TextView
        android:id="@+id/editTextViewFineAmount"
        android:layout_width="260dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:text="@string/PrintPreviewFineAmount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextViewViolationType" />

    <TextView
        android:id="@+id/editTextViewLicensePlate"
        android:layout_width="260dp"
        android:layout_height="30dp"
        android:layout_marginTop="24dp"
        android:text="@string/PrintPreviewLicensePlate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextViewVehicleInfo" />

    <TextView
        android:id="@+id/editTextViewVehicleModel"
        android:layout_width="260dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:text="@string/PrintPreviewVehicleModel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextViewLicensePlate" />

    <TextView
        android:id="@+id/editTextViewVehicleColor"
        android:layout_width="260dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:text="@string/PrintPreviewVehicleColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextViewVehicleMake"
        tools:text="@string/PrintPreviewVehicleColor" />

    <TextView
        android:id="@+id/editTextViewViolationType"
        android:layout_width="260dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:text="@string/PrintPreviewViolationType"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextViewCitationLocation" />

    <TextView
        android:id="@+id/editTextViewCitationLocation"
        android:layout_width="260dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="76dp"
        android:text="@string/PrintPreviewCitationLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextViewReportingOfficer" />

    <TextView
        android:id="@+id/editTextViewReportingOfficer"
        android:layout_width="260dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:text="@string/PrintPreviewReportingOfficer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextViewViolationTime" />

    <TextView
        android:id="@+id/editTextViewViolationTime"
        android:layout_width="260dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:text="@string/PrintPreviewViolationTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextViewTicketID" />

    <TextView
        android:id="@+id/editTextViewPreviewTicketInfo"
        android:layout_width="119dp"
        android:layout_height="30dp"
        android:layout_marginTop="80dp"
        android:text="@string/PrintPreviewTicketInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>